feat: add workflow definition candidates
